--- a/COVID_SIR_Model/Jupyter_Notebooks/BIO_tried_Logistic_Regression_and_Curve_Fitting.ipynb
+++ b/COVID_SIR_Model/Jupyter_Notebooks/BIO_tried_Logistic_Regression_and_Curve_Fitting.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# BIO101 Epidemiology  Assignment\n",
-    "### By Kartikey Sharma and Surya Shukla"
+    "### By Kartikey Sharma"
    ]
   },
   {
